--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of lizard-flooding
 ===================================================
 
 
+1.14 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.13 (2011-05-25)
 -----------------
 
