--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of lizard-flooding
 ===================================================
 
 
+1.17 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.16 (2012-03-01)
 -----------------
 
