--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of lizard-flooding
 ===================================================
 
 
+1.19 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.18 (2012-03-27)
 -----------------
 
