--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of lizard-flooding
 ===================================================
 
 
+1.20 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.19 (2012-04-24)
 -----------------
 
