--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of lizard-flooding
 ===================================================
 
 
+1.21 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.20 (2012-05-03)
 -----------------
 
