--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of lizard-flooding
 1.25 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Made a field check case insensitive.
 
 
 1.24 (2012-05-10)
