--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.29 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.28 (2012-06-11)
 -----------------
 
