--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.28.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.28.3 (2012-06-11)
 -------------------
 
