--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,9 @@ Changelog of flooding-lib
 1.30 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Show a legend text above the import new scenario screen.
+
+- Increased flooding-base to 1.24 so we can use its Text model
 
 
 1.29 (2012-06-12)
