--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 1.31 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix issue with encoding the legend Text.
 
 
 1.30 (2012-06-14)
