--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 1.32 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix bug with importing Excel dates #3683.
 
 
 1.31.1 (2012-06-14)
