--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.32.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.32.1 (2012-06-15)
 -------------------
 
