--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.35 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.34 (2012-06-20)
 -----------------
 
