--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,10 @@ Changelog of flooding-lib
 1.35 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Large scale code formatting (pep8/pyflakes), down to 0 errors from
+  ~2300
 
+- Add breadcrumbs to add files screen in import (#3687)
 
 1.34 (2012-06-20)
 -----------------
