Fixes Trac #3685 by making IMPORT_STATE_WAITING the new default for ImportScenario's.
Also moves some functionality from the view code into
models.ImportScenario (the receive_import_fields method) and adds a
test for that. This functionality should also be used by the group
import, but that's not implemented yet.

Also, update_scenario_name() in ImportScenario does not save the importscenario
anymore. All places that call that function have been updated.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,10 +5,15 @@ Changelog of flooding-lib
 1.35 (unreleased)
 -----------------
 
+- Add breadcrumbs to add files screen in import (#3687)
+
+- Make WAITING the default state for new ImportScenarios (#3685)
+
 - Large scale code formatting (pep8/pyflakes), down to 0 errors from
   ~2300
 
-- Add breadcrumbs to add files screen in import (#3687)
+- Refactor and test import code some more (move functionality from
+  views into models)
 
 1.34 (2012-06-20)
 -----------------
