--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ Changelog of flooding-lib
 - Refactor and test import code some more (move functionality from
   views into models)
 
+- Fixed import of Image.
+
 1.34 (2012-06-20)
 -----------------
 
