--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.36 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.35 (2012-06-26)
 -----------------
 
