--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.38 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.37 (2012-07-02)
 -----------------
 
