--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+1.40 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.39 (2012-07-06)
 -----------------
 
