--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,7 +6,7 @@ Changelog of flooding-lib
 ----------------
 
 Overhaul of the approval system. From now on, there will be no
-Task-based approval, no any project-wide 'approved' checkbox. The only
+Task-based approval, nor any project-wide 'approved' checkbox. The only
 thing we will use is the approval objects from approvaltool, and their
 contents will be changed.
 
@@ -35,6 +35,10 @@ Steps taken:
   approvalobject that also enters ApprovalObjectState lines into the
   database, and approved() and disapproved() properties that check
   whether all or some of the states have been filled in.
+
+- Change Scenario.update_status() so that it looks at the approval object
+  of the main project for approved and disapproved status. Tasks for
+  approval and disapproval are now obsolete.
 
 2.0 (2012-07-09)
 ----------------
