--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.0.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.1 (not yet released)
 ------------------------
 
