--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.0.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.1 (2012-07-20)
 ------------------
 
