Made value_string() fit for use with Unicode-containing strings, and renamed it to value_unicode().

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+Made value_string() fit for use with Unicode-containing strings, and
+renamed it to value_unicode().
 
 
 2.0.1 (2012-07-20)
