--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.0.4 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.3 (2012-07-23)
 ------------------
 
