Back to development: 2.0.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.0.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.4 (2012-07-23)
 ------------------
 
