--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+Don't show deleted scenarios on the scenario sharing screen.
 
 
 2.3 (2012-08-09)
