--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.6 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 2.5.2 (2012-08-15)
 ------------------
 
